--- a/src/components/wrapper/wrapper.scss
+++ b/src/components/wrapper/wrapper.scss
@@ -1,5 +1,5 @@
-@import "../../assets/mdi/materialdesignicons.min.css";
-@import '../../global/global.scss'; // ✅ bring in your global styles
+// @import "../../assets/mdi/materialdesignicons.min.css";
+// @import '../../global/global.scss'; // ✅ bring in your global styles
 
 .app-wrapper {
   display: block;
