--- a/src/components/plumage-autocomplete-single/plumage-autocomplete-styles.scss
+++ b/src/components/plumage-autocomplete-single/plumage-autocomplete-styles.scss
@@ -168,7 +168,7 @@ $fs-lg: 1.2rem;
     padding: 0.35rem 0.5rem;
 
     font-size: $fs-sm;
-    color: #000;
+    color: #000 !important;
 
     background-color: transparent !important;
     border: 1px solid $gray-600 !important;
