Storybook and component updates for Accordion and Accordion Container, updates test specs

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -544,3 +544,9 @@ $btn-text-variants: (
   border-radius: 0;
   width: 100%;
 }
+
+:host(:focus-visible),
+:focus-visible {
+  outline: none !important;
+  border: none !important;
+}
