--- a/src/components/progress-display/progress-display-styles.scss
+++ b/src/components/progress-display/progress-display-styles.scss
@@ -136,38 +136,38 @@ circle {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+  // background-color: #007bff !important;
   stroke: #007bff !important;
 }
 
 .bg-secondary {
-  background-color: #6c757d !important;
+  // background-color: #6c757d !important;
   stroke: #6c757d !important;
 }
 
 .bg-success {
-  background-color: #28a745 !important;
+  // background-color: #28a745 !important;
   stroke: #28a745 !important;
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  // background-color: #17a2b8 !important;
   stroke: #17a2b8 !important;
 }
 
 .bg-warning {
-  background-color: #ffc107 !important;
+  // background-color: #ffc107 !important;
   stroke: #ffc107 !important;
   color: #000;
 }
 
 .bg-danger {
-  background-color: #dc3545 !important;
+  // background-color: #dc3545 !important;
   stroke: #dc3545 !important;
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  // background-color: #343a40 !important;
   stroke: #343a40 !important;
 }
 
