--- a/src/components/badge/badge.scss
+++ b/src/components/badge/badge.scss
@@ -10,7 +10,7 @@
 
     .text-bg-#{"" + $name} {
       background-color: #{$value};
-      color: if(#{$name} == yellow, #000, #fff)t;
+      color: if(#{$name} == yellow, #000, #fff);
     }
 
     .bg-#{"" + $name}.outlined {
@@ -56,7 +56,6 @@ $badge-sizes: (
 }
 
 // _badge-variants
-
 $badge-variants: (
   accent:   (#2680eb, true),
   primary:  (#2680eb, true),
@@ -66,11 +65,11 @@ $badge-variants: (
   danger:   (#e34850, true),
   warning:  (#e68619, true),
   info:     (#5aa9fa, true),
-  light:    (#c5c5c5, false), // no text color in outlined version (matches source)
+  light:    (#c5c5c5, true), // <- outlined should use #c5c5c5 for text
   dark:     (#323232, true)
 );
 
-// Variants that get white text when NOT outlined (matches your explicit list)
+// Variants that get white text when NOT outlined
 $badge-white-text-when-solid: accent, danger, info, primary, secondary, success, warning, dark;
 
 // Base outlined rule
@@ -95,15 +94,15 @@ $badge-white-text-when-solid: accent, danger, info, primary, secondary, success,
 
   .badge--outlined.#{$name},
   .badge__token.outlined.#{$name} {
-    background-color: transparent;
+    background-color: #fff;
     border-color: $color;
     @if $set-text {
-      color: $color;
+      color: $color; // now adds color for light too
     }
   }
 }
 
-// 3) Token override (matches your final group)
+// 3) Token override
 @each $name, $tuple in $badge-variants {
   .badge__token.outlined.#{$name} {
     background-color: #fff;
