--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -116,7 +116,7 @@ $btn-text-variants: (
     plain-hover: #3596f9,
   ),
   light: (
-    base: #f2f2f2,
+    base: #C5c5c5,
     hover-bg: #dfdfdf,
     hover-border: #dfdfdf,
     hover-text: #1f1f1f,
@@ -174,6 +174,30 @@ $btn-text-variants: (
 
 @each $name, $cfg in $btn-text-variants {
   @include text-button-variant($name, $cfg);
+}
+
+.btn-outline-light {
+  background-color: transparent !important;
+  border-color: #c5c5c5 !important;
+  color: #c5c5c5 !important;
+
+  &:hover {
+    background-color: #dfdfdf !important;
+    border-color: #dfdfdf !important;
+    color: #1f1f1f !important;
+  }
+
+  &:focus {
+    box-shadow: 0 0 0 0.2rem #dfdfdf !important;
+  }
+
+  &.active,
+  &:not(:disabled):not(.disabled).active,
+  &:not(:disabled):not(.disabled):active {
+    background-color: #dfdfdf !important;
+    border-color: #dfdfdf !important;
+    color: #1f1f1f !important;
+  }
 }
 
 .btn-flex {
@@ -329,13 +353,15 @@ $btn-text-variants: (
     /* color: inherit !important; */
   }
 
-  .btn--block {
+
+}
+
+.btn--block {
     display: flex;
     flex: 1 0 auto;
     min-width: 100% !important;
     max-width: none;
   }
-}
 
 .btn__content {
   align-items: center;
@@ -419,6 +445,10 @@ $btn-text-variants: (
 
 .btn.circle {
   border-radius: 50%;
+  padding: 5px 8px 5px 8px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn {
