--- a/src/components/toggle-switch/toggle-switch.scss
+++ b/src/components/toggle-switch/toggle-switch.scss
@@ -29,6 +29,10 @@
     opacity: 0;
   }
 
+  .form-check-input {
+    border-color: #BBBBBB ;
+  }
+
   input[type='checkbox'],
   input[type='radio'] {
     box-sizing: border-box;
