--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -370,10 +370,15 @@ $btn-text-variants: (
   flex: 1 1 auto;
   justify-content: inherit;
   line-height: inherit;
+  // padding-top: 2px;
   position: relative;
   transition: inherit;
   transition-property: opacity;
   width: 100%;
+
+  i {
+    margin-top: 5px
+  }
 }
 
 .btn.btn-active-blue {
