--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -37,6 +37,7 @@
   .group-title {
     font-size: 0.875rem !important;
     margin-bottom: 0;
+    margin-top: 0.25rem;
   }
 
   .form-check-label.sm,
@@ -54,8 +55,12 @@
   .form-check-input {
     width: 1rem;
     height: 1rem;
-    margin-top: 0.25rem;
+    margin-top: 0.17rem;
     margin-left: -1.5rem !important;
+  }
+
+  .custom-control {
+    padding: 0;
   }
 
   .form-check-label.lg,
@@ -64,17 +69,18 @@
     font-size: 1rem !important;
   }
 
-  .check-box .custom-control-label {
+  .custom-control-label {
     font-size: 0.875rem !important;
     padding-top: 0;
+    position: relative;
   }
 
-  .check-box .custom-control-label.sm {
+  .custom-control-label.sm {
     font-size: 0.75rem !important;
     padding-top: 4px;
   }
 
-  .check-box .custom-control-label.lg {
+  .custom-control-label.lg {
     font-size: 1rem !important;
     padding-top: 0;
   }
