--- a/src/components/custom-form-inputs.scss
+++ b/src/components/custom-form-inputs.scss
@@ -13,12 +13,12 @@
 
 .custom-control-label.sm {
   font-size: 0.75rem;
-  padding-top: .25rem;
+  padding-top: 0.25rem;
 }
 
 .custom-control-label.md {
   font-size: 0.875rem;
-  padding-top: .25rem;
+  padding-top: 0.25rem;
 }
 
 .custom-control-label.md:before {
@@ -86,23 +86,27 @@
 }
 
 .custom-control-label::before {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
-  display: block;
+  display: flex;
+  align-items: center;
   width: 1rem;
   height: 1rem;
   pointer-events: none;
   content: '';
   user-select: none;
   background-color: #dee2e6;
+  border: 1px solid #bbbbbb;
+  margin-right: 8px;
 }
 
 .custom-control-label::after {
   position: absolute;
-  top: 0;
+  top: 4px;
   left: 0;
-  display: block;
+  display: flex;
+  align-items: center;
   width: 1rem;
   height: 1rem;
   content: '';
