--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -28,6 +28,11 @@ $fa-font-path: '/assets/fonts'; // ✅ must be before imports!
   --bs-link-color: #1154A7 !important;
 }
 
+.sbdocs-preview {
+  border: 1px solid rgb(0 0 0 / 28%) !important;
+}
+
+
 // :root {
 //   --amber: #ffc107;
 //   --blue: #2196f3;
