--- a/src/components/tooltip/tooltip-styles.scss
+++ b/src/components/tooltip/tooltip-styles.scss
@@ -1,14 +1,15 @@
-*,
-:after,
-:before {
-  box-sizing: border-box;
-}
+// *,
+// :after,
+// :before {
+//   box-sizing: border-box;
+// }
 
-:after,
-:before {
-  text-decoration: inherit;
-  vertical-align: inherit;
-}
+// :after,
+// :before {
+//   text-decoration: inherit;
+//   vertical-align: inherit;
+// }
+
 .primary {
   background-color: #1867c0 !important;
   color: #fff !important;
@@ -44,34 +45,34 @@
   color: #fff !important;
 }
 
-.tooltip {
-  position: absolute;
-  z-index: 1070;
-  display: block;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 0.875rem; /* Tooltip font size 0.8333rem */
-  font-weight: 400;
-  line-height: 1.2;
-  text-align: left;
-  text-align: start;
-  text-decoration: none;
-  text-shadow: none;
-  text-transform: none;
-  letter-spacing: normal;
-  word-break: normal;
-  word-spacing: normal;
-  white-space: normal;
-  line-break: auto;
-  word-wrap: break-word;
-  margin: 0;
-  opacity: 0;
-  transition: opacity 0.15s;
-  border-radius: 0.25rem;
-}
+// .tooltip {
+//   position: absolute;
+//   z-index: 1070;
+//   display: block;
+//   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+//   font-size: 0.875rem; /* Tooltip font size 0.8333rem */
+//   font-weight: 400;
+//   line-height: 1.2;
+//   text-align: left;
+//   text-align: start;
+//   text-decoration: none;
+//   text-shadow: none;
+//   text-transform: none;
+//   letter-spacing: normal;
+//   word-break: normal;
+//   word-spacing: normal;
+//   white-space: normal;
+//   line-break: auto;
+//   word-wrap: break-word;
+//   margin: 0;
+//   opacity: 0;
+//   transition: opacity 0.15s;
+//   border-radius: 0.25rem;
+// }
 
-.tooltip.show {
-  opacity: 1 !important;
-}
+// .tooltip.show {
+//   opacity: 1 !important;
+// }
 
 .tooltip .tooltip-arrow {
   position: absolute;
@@ -105,7 +106,7 @@
 .tooltip.tooltip-top .tooltip-arrow.danger,
 .tooltip.tooltip-top .tooltip-arrow.dark {
   border-width: 0.5rem 0.375rem 0 !important;
-  background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
 .tooltip.tooltip-top .tooltip-arrow.primary {
@@ -152,7 +153,7 @@
 .tooltip.tooltip-bottom .tooltip-arrow.danger,
 .tooltip.tooltip-bottom .tooltip-arrow.dark {
   border-width: 0 0.375rem 0.5rem !important;
-  background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
 .tooltip.tooltip-bottom .tooltip-arrow.primary {
@@ -199,7 +200,7 @@
 .tooltip.tooltip-left .tooltip-arrow.danger,
 .tooltip.tooltip-left .tooltip-arrow.dark {
   border-width: 0.375rem 0 0.375rem 0.5rem !important;
-  background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
 .tooltip.tooltip-left .tooltip-arrow.primary {
@@ -246,7 +247,7 @@
 .tooltip.tooltip-right .tooltip-arrow.danger,
 .tooltip.tooltip-right .tooltip-arrow.dark {
   border-width: 0.375rem 0.5rem 0.375rem 0 !important;
-  background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
 .tooltip.tooltip-right .tooltip-arrow.primary {
